<resources>
    <string name="app_name">Dogpedia</string>

    <!--Navigation Drawer Strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_my_page">My dogpedia</string>
    <string name="nav_menu_view_history">View History</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_help">Help</string>
    <string name="nav_menu_alarm">Alarms</string>


    <!--Menu Strings-->
    <string name="action_search">Search</string>


</resources>
