<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_my_dogpedia"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_menu_my_page" />
        <item
            android:id="@+id/nav_view_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_menu_view_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_menu_help" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/nav_menu_alarm" />
    </group>
</menu>
